[project]
name = "wydajnosc-skalowanie-replikacja"
version = "0.1.0"
description = ""
authors = [
    {name = "Szymon Blatkowski",email = "s.blatkowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
